--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": {
     "name": "Rob O'Leary"
   },
-  "description": "Markdown table of contents, section numbering - auto-update them on save.",
+  "description": "Automate updating dynamic content e.g. Table of Contents.",
   "icon": "img/logo.png",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "engines": {
     "vscode": "^1.46.0"
   },
