--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,14 +1,17 @@
-.vscode
-node_modules
-.vscode-test
-test
-.gitignore
-**/jsconfig.json
-**/*.map
-**/.eslintrc.json
-src
-webpack.config.js
+*/
+
 img/**
 !img/logo.png
-todo.md
-.github
+
+**/*.map
+**/*.js
+**/*.json
+*.md
+*.yml
+.gitignore
+
+!dist/extension.js
+!package.json
+!README.md
+!CHANGELOG.md
+!LICENSE.md
