--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   },
   "description": "Automate updating dynamic content e.g. Table of Contents.",
   "icon": "img/logo.png",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "engines": {
     "vscode": "^1.46.0"
   },
   "categories": [
     "Other"
   ],
+  "sponsor": {
+    "url": "https://ko-fi.com/roboleary"
+  },
   "galleryBanner": {
     "color": "#00ffff",
     "theme": "light"
@@ -149,29 +152,28 @@
     "format": "npx prettier --write .",
     "test": "node ./test/runTest.js",
     "webpack": "webpack --mode development",
-    "webpack-dev": "webpack --mode development --watch",
+    "dev": "webpack --mode development --watch",
     "vscode:prepublish": "webpack --mode production",
-    "build": "vsce package ."
+    "build": "vsce package"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.1",
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^13.11.0",
+    "@types/glob": "^7.1.3",
+    "@types/mocha": "^8.0.4",
+    "@types/node": "^12.11.7",
     "@types/vscode": "^1.46.0",
-    "chai": "^4.2.0",
-    "eslint": "^7.2.0",
+    "chai": "^4.3.4",
+    "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-node-roboleary": "^0.1.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-config-roboleary-node": "0.0.2",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-node": "^11.1.0",
-    "glob": "^7.1.6",
-    "mocha": "^7.1.2",
+    "mocha": "^8.2.1",
     "prettier": "^2.0.5",
-    "typescript": "^3.8.3",
-    "vsce": "^1.77.0",
-    "vscode-test": "^1.3.0",
-    "webpack": "^4.44.0",
-    "webpack-cli": "^3.3.12"
+    "typescript": "^4.1.3",
+    "vsce": "^2.15.0",
+    "webpack": "^5.78.0",
+    "webpack-cli": "^5.0.1",
+    "@vscode/test-electron": "^2.3.0"
   }
 }
